--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.4.9",
