added preview environment

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_API_URL=https://communifit-back.vercel.app/api/v1
 NEXT_PUBLIC_API_KEY=C0mmunityF1tB4ck3nd2023
-NEXT_PUBLIC_DOMAIN=https://communifit-front.vercel.app/
+NEXT_PUBLIC_DOMAIN=https://communifit-front.vercel.app
 
 API_URL_DEV=https://communifit-back.vercel.app/api/v1
 DOMAIN_DEVELOPMENT=http://localhost:3000/
