--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "recharts": "2.1.9",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
