feat: workout modal

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,12 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000/api/v1
 NEXT_PUBLIC_API_KEY=C0mmunityF1tB4ck3nd2023
 NEXT_PUBLIC_DOMAIN=http://localhost:3000/
+
+
+NEXTAUTH_SECRET="NEXT_AUTH_SECRET_COMMUNIFIT"
+
+GITHUB_ID=bc56e56fd4c0e1062c26
+GITHUB_SECRET=32c0fa92350efed7a351405cb3a8c5e705020220
+
+GOOGLE_CLIENT_ID=712952718350-ggce0pufgv28uma839vllcihpnt77hv3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
