--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eslint": "8.28.0",
     "eslint-config-next": "^13.4.9",
     "next": "^13.4.9",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
