--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "recharts": "2.1.9",
     "typescript": "4.9.3",
