--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^18.13.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
