--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^18.13.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-jest": "^27.4.2",
     "jest": "^29.7.0",
