--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["plugin:react/recommended"],
+	"extends": ["eslint:recommended", "next", "prettier", "next/core-web-vitals"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
@@ -14,6 +14,8 @@
 	},
 	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
+		"react/no-unescaped-entities": "off",
+		"@next/next/no-page-custom-font": "off",
 		"import/extensions": [
 			"error",
 			"ignorePackages",
