--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.5.4",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
@@ -36,6 +37,7 @@
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.4.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
