modify eslint json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,5 +29,13 @@
 	},
 	"settings": {
 		"react": { "version": "detect" }
-	}
+	},
+	"overrides": [
+		{
+			"files": ["**/*.spec.js", "**/*.spec.jsx"],
+			"env": {
+				"jest": true
+			}
+		}
+	]
 }
