--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["eslint:recommended", "next", "prettier", "next/core-web-vitals"],
+	"extends": ["next", "prettier", "next/core-web-vitals"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
@@ -32,7 +32,7 @@
 	},
 	"overrides": [
 		{
-			"files": ["**/*.spec.js", "**/*.spec.jsx"],
+			"files": ["**/*.spec.ts", "**/*.spec.tsx"],
 			"env": {
 				"jest": true
 			}
