--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.51.0",
     "eslint-config-next": "^13.4.9",
+    "jest-fetch-mock": "^3.0.3",
     "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
