--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tailwindcss ./app/globals.css --output ./app/output.css && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "test": "jest --coverage --config ./jest.config.js --testTimeout=10000",
+    "test:ci": "jest --config ./jest.config.js --collectCoverage --coverageDirectory=\"./coverage\" --ci --reporters=default --reporters=jest-junit --watchAll=false --logHeapUsage --maxConcurrency=4 --maxWorkers='50%' --testTimeout=15000"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -37,9 +37,13 @@
     "@types/react": "18.2.27",
     "@types/react-dom": "18.2.12",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.4.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.19",
