--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10.4.13",
+    "axios-mock-adapter": "^1.22.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-node": "^11.1.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.1.1"
