add: bundle analyzer

--- a/.env.preview
+++ b/.env.preview
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_API_URL=https://communifit-back-git-dev-peaky-devs.vercel.app/api/v1
 NEXT_PUBLIC_API_KEY=C0mmunityF1tB4ck3nd2023
 NEXT_PUBLIC_DOMAIN=https://communifit-front-git-dev-peaky-devs.vercel.app/
+ANALYZE=false
