--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.5.4",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "eslint": "8.51.0",
