--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.5.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.4.0",
