--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@next/bundle-analyzer": "^13.5.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -30,13 +31,14 @@
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "recharts": "2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "zod": "^3.22.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
