--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@next/bundle-analyzer": "^13.5.4",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.29.3",
     "eslint": "8.51.0",
     "eslint-config-next": "^13.4.9",
     "jest-fetch-mock": "^3.0.3",
+    "lucide-react": "^0.287.0",
     "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
@@ -28,6 +31,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "recharts": "2.8.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zustand": "^4.3.9"
   },
