--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "tailwindcss ./app/globals.css --output ./app/output.css  && next build",
     "start": "next start",
     "lint": "next lint",
@@ -25,10 +25,9 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.29.3",
     "eslint": "8.51.0",
-    "eslint-config-next": "^13.4.9",
-    "jest-fetch-mock": "^3.0.3",
+    "eslint-config-next": "^14.0.4",
     "lucide-react": "^0.287.0",
-    "next": "^13.4.9",
+    "next": "^14.0.4",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
@@ -62,6 +61,7 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jest-mock-axios": "^4.7.3",
     "postcss": "^8.4.19",
     "prettier": "^3.0.3",
